# L.I.L.I.T.H.

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: __init__.py
data/download/: __init__.py  asos_1min.py  climate_indices.py  ghcn_daily.py  ghcn_hourly.py  synoptic.py
data/loaders/: __init__.py  forecast_dataset.py  station_dataset.py
data/processing/: __init__.py  ghcn_processor.py  hourly_processor.py  pipeline.py  quality_control.py
docker/: Dockerfile.inference  Dockerfile.web  docker-compose.yml
inference/: __init__.py  baselines.py  forecast.py  quantize.py  simple_forecaster.py
lilith/: __init__.py  cli.py  config.py
models/: __init__.py  lilith.py  losses.py  simple_lilith.py
models/components/: __init__.py  climate_embed.py  ensemble_head.py  gat_encoder.py  sfno.py  station_embed.py  temporal_transformer.py
models/configs/: base.yaml  large.yaml  tiny.yaml
scripts/: download_data.py  process_data.py  run_inference.py  start_api.py  train_model.py
tests/: __init__.py  conftest.py  test_api.py  test_baselines.py  test_cli.py  test_climate_indices.py  test_data.py  test_hourly_processor.py  test_models.py  test_simple_forecaster.py  test_training_utils.py
training/: __init__.py  finetune_chronos.py  train_full.py  train_simple.py  trainer.py
web/api/: __init__.py  main.py  schemas.py
web/frontend/: next.config.js  package.json  tailwind.config.ts
web/frontend/src/app/: globals.css  layout.tsx  page.tsx
web/frontend/src/app/historical/: page.tsx
web/frontend/src/app/metar/: page.tsx
web/frontend/src/components/: LocationSearch.tsx  Settings.tsx
web/frontend/src/components/accuracy/: AccuracyTracker.tsx
web/frontend/src/components/charts/: ForecastChart.tsx  PrecipitationChart.tsx  UncertaintyChart.tsx
web/frontend/src/components/forecast/: DailyCards.tsx  HourlyScroll.tsx  TemperatureDisplay.tsx
web/frontend/src/components/historical/: ClimateChart.tsx  RecordEvents.tsx
web/frontend/src/components/map/: WeatherMap.tsx
web/frontend/src/components/ui/: GlassCard.tsx  Hero.tsx  WeatherBackground.tsx
web/frontend/src/hooks/: useForecast.ts
web/frontend/src/stores/: weatherStore.ts
